# local-video-brief

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/manual-check/: SKILL.md
.claude/skills/test-e2e/: SKILL.md
artifacts/plan/: LECTURE_PLAN_V2.md  LECTURE_PLAN_V2_IMPLEMENTATION.md
backend/app/: main.py
backend/app/api/: config.py  jobs.py
backend/app/core/: config.py  style_presets.py
backend/app/db/: database.py
backend/app/models/: job.py
backend/app/repositories/: job_repository.py
backend/app/schemas/: jobs.py
backend/app/services/: asr.py  chaptering.py  interfaces.py  normalizer.py  pipeline.py  queue.py  storage.py  study_pack.py  summarizer.py  transcript.py  video_source.py
backend/app/utils/: text.py
backend/tests/: test_api.py  test_chaptering.py  test_config.py  test_config_endpoint.py  test_job_options.py  test_normalizer.py  test_pipeline_normalization.py  test_study_pack.py  test_style_presets.py  test_summarizer.py  test_text_utils.py
backend/tests/fixtures/: inline_markup_en.vtt  youtube_rolling_en.vtt
docs/: LECTURE_PLAN_V2.md  LECTURE_PLAN_V2_IMPLEMENTATION.md  roadmap.md
docs/specs/: configurable-prompts-v2.md  configurable-prompts-v3-power-mode.md  deepseek-summarizer-selection.md  omlx-integration.md  transcript-normalization.md  video-summary-v1-spec.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: JobForm.test.tsx  (+6 more)
scripts/: dev_server.sh  test_video_job.sh  validate_e2e_run.py
(+7 files in other folders)
